--- a/docs/ATTT2022.1/hop-cuoi-hk1-2024-2025.md
+++ b/docs/ATTT2022.1/hop-cuoi-hk1-2024-2025.md
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 1
 ---
-
+# Họp lớp HK1
 Lớp ATTT2022 tổ chức cuộc họp trực tuyến để thông báo các thông tin về BHYT và giải đáp các thắc mắc trong việc chuẩn bị cho năm học mới.
-# BHYT
+## BHYT
 Hiện tại **BHYT** đã cập nhật danh sách đợt 1 ở link dưới.
 
 Sinh viên chưa thực hiện đăng kí BHYT có thể đợi đợt tiếp theo.
